# vem-review

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
notebooks/: example-fir-model.ipynb  simulate-noise-ceiling.ipynb  utils.py
scripts/: 01_fit-banded-ridge.py  02_plot-banded-ridge.py
src/: setup.py
src/vemreview/: config.py  io.py  utils.py
